--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "store-app",
   "version": "0.1.0",
-  "homepage": "https://danxschz.github.io/store-app",
+  "homepage": "https://trl.danxschz.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
